fix alignment issue for sugestions

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -988,7 +988,7 @@ a {
     }
   }
   .left {
-    justify-content: space-between;
+    justify-content: flex-start;
   }
   .no-suggestion-padding {
     padding: 0 10rem 0 10rem;
